--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,8 @@
 <h1>Football News</h1>
 
 <h5>NPM: </h5>
-<p>2406343224</p>
+<p>{{ npm }}</p>
 <h5>Name: </h5>
-<p>Galih<p>
+<p>{{ name }}<p>
 <h5>Class: </h5>
-<p>E</p>
+<p>{{ class }}</p>
